# breadlock

./: .gitignore  Cargo.toml  README.md  bakery.toml  breadgreet.example.toml  breadlock.example.toml
.forgejo/workflows/: mirror.yml  package.yml
breadgreet/: Cargo.toml
breadgreet/src/: config.rs  main.rs  sessions.rs  theme.rs
breadgreet/src/greetd/: client.rs  mod.rs
breadlock/: Cargo.toml
breadlock-ui/: Cargo.toml
breadlock-ui/src/: config.rs  desktop_entry.rs  lib.rs  painter.rs  theme.rs
breadlock/src/: background.rs  config.rs  main.rs  render.rs  state.rs
breadlock/src/auth/: mod.rs  pam.rs
breadlock/src/input/: keyboard.rs
breadlock/src/lock/: mod.rs  session.rs  surface.rs
packaging/arch/: PKGBUILD
packaging/pam.d/: breadlock
