[workspace]
members = ["breadlock-ui", "breadlock", "breadgreet"]
resolver = "2"

[workspace.dependencies]
bread-theme = { git = "https://github.com/Breadway/bread-ecosystem", tag = "v0.2.10" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
