[package]
name = "breadlock-ui"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Breadway <plasticbread849@gmail.com>"]

[dependencies]
bread-theme.workspace = true
serde.workspace = true
toml.workspace = true

# Software-rendering primitives (breadlock only — breadgreet draws via GTK/CSS
# instead, so it builds without pulling these in).
tiny-skia = { version = "0.12", optional = true }
cosmic-text = { version = "0.14", optional = true }
chrono = { version = "0.4", optional = true }

[features]
paint = ["dep:tiny-skia", "dep:cosmic-text", "dep:chrono"]
